// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E: Pull Request Module Test Close PR \`gh pr 50 --close\` 1`] = `
"Closing pull request #50
https://github.com/protoEvangelion/gh/pull/50
"
`;

exports[`E2E: Pull Request Module Test Comment on PR \`gh pr 50 --comment "Just started reviewing :)"\` 1`] = `
"Adding comment on pull request #50
https://github.com/protoEvangelion/gh/pull/50#issuecomment-000000001
"
`;

exports[`E2E: Pull Request Module Test Fetch PR \`gh pr --fetch 50\` 1`] = `
"Fetching pull request #50 into branch pr-50
[hook] gh pr 50 --user protoEvangelion --repo gh --comment 'Just started reviewing :)'
Adding comment on pull request #50
https://github.com/protoEvangelion/gh/pull/50#issuecomment-000000001
"
`;

exports[`E2E: Pull Request Module Test Get PR Info \`gh pr --info 50\` 1`] = `
"#50 pr2 @protoEvangelion (a year ago)
"
`;

exports[`E2E: Pull Request Module Test List PRs \`gh pr\` 1`] = `
"Listing open pull requests on protoEvangelion/gh
protoEvangelion/gh
master (3)
#51 pr3 @protoEvangelion (a year ago) ✓
#50 pr2 @protoEvangelion (a year ago) ✓
#33 test @protoEvangelion (a year ago) ✓
"
`;

exports[`E2E: Pull Request Module Test Open PR \`gh pr 50 --open\` 1`] = `
"Opening pull request #50
https://github.com/protoEvangelion/gh/pull/50
"
`;

exports[`E2E: Pull Request Module Test Submit PR \`gh pr -s protoEvangelion -b master -t "pr title" -D "pr description"\` 1`] = `
"Submitting pull request to @protoEvangelion
https://github.com/protoEvangelion/gh/pull/54
[hook] gh pr --browser  --user protoEvangelion --repo gh --number 54
"
`;
